--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key
 
 # Verification Toggle (set to "false" to disable email verification for manual account creation)
 VITE_REQUIRE_EMAIL_VERIFICATION=true
+
+# App URL (for Vercel deployment - set to your Vercel app URL)
+VITE_APP_URL=https://your-app.vercel.app
+
+# EmailJS Leaderboard Template (optional - falls back to main template if not set)
+VITE_EMAILJS_LEADERBOARD_TEMPLATE_ID=your_leaderboard_template_id
